<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:height="30dp"
        android:alpha="1"
        android:autoText="false"
        android:contentDescription="@string/titulo"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/titulo"
        android:textSize="20sp"
        android:textStyle="bold"
        android:translationX="0dp"
        android:visibility="visible"
        app:autoSizeMaxTextSize="50sp"
        app:autoSizeTextType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TableLayout
        android:id="@+id/t1"
        android:layout_width="405dp"
        android:layout_height="125dp"
        android:layout_marginBottom="7dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintBottom_toTopOf="@+id/button_inicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo">

        <TableRow
            android:id="@+id/t11"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_estado_b"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/text_estado_b" />

            <TextView
                android:id="@+id/output_bluetooth"
                android:layout_width="179dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:id="@+id/t12"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_user"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/text_user" />

            <TextView
                android:id="@+id/output_user"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:id="@+id/t13"
            android:layout_width="411dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_id_miner"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/text_id_miner" />

            <TextView
                android:id="@+id/output_id"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button_inicio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/button_inicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t1" />

    <LinearLayout
        android:id="@+id/t2"
        android:layout_width="403dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_inicio">

        <TextView
            android:id="@+id/text_timestamp_i"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_weight="1.2"
            android:text="@string/text_timesamp_i" />

        <TextView
            android:id="@+id/output_t_ini"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:translationX="40dp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_fin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/button_fin"
        app:layout_constraintBottom_toTopOf="@+id/button_desconectar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t2"
        app:layout_constraintVertical_bias="0.152" />

    <Button
        android:id="@+id/button_desconectar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/button_desconectar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>