<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titulo_login"
        android:layout_width="352dp"
        android:layout_height="26dp"
        android:text="@string/titulo_register"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="359dp"
        android:layout_height="188dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/table_register_name"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/text_register_name"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/text_register_nombre" />

            <EditText
                android:id="@+id/input_register_name"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />

        </TableRow>

        <TableRow
            android:id="@+id/table_register_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_register_user"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/text_register_user" />

            <EditText
                android:id="@+id/input_register_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="User" />

        </TableRow>

        <TableRow
            android:id="@+id/table_register_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_register_pass"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/text_register_pass" />

            <EditText
                android:id="@+id/input_register_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"

                android:text="Pass" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_register"
        android:onClick="userReg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.322" />

</androidx.constraintlayout.widget.ConstraintLayout>