<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/t3"
        android:layout_width="389dp"
        android:layout_height="84dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="150dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:id="@+id/t31"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp">

            <TextView
                android:id="@+id/text_t_inick"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginStart="45dp"
                android:layout_marginLeft="45dp"
                android:layout_weight="1.3"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:text="@string/text_t_inick" />

            <TextView
                android:id="@+id/output_t_ini2ck"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:translationX="0dp" />

        </TableRow>

        <TableRow
            android:id="@+id/t33"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp">

            <TextView
                android:id="@+id/text_energia_ck"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginStart="45dp"
                android:layout_marginLeft="45dp"
                android:layout_weight="1.3"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:text="@string/text_energia_check" />

            <TextView
                android:id="@+id/output_eck"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:translationX="0dp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button_anterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/button_anterior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t3"
        app:layout_constraintVertical_bias="0.604" />

    <Button
        android:id="@+id/button_nueva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/button_nueva"
        app:layout_constraintBottom_toTopOf="@+id/button_anterior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pregunta_check" />

    <TextView
        android:id="@+id/titulo_popupck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/titulo_popupck"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/t3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pregunta_check"
        android:layout_width="289dp"
        android:layout_height="97dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/text_pregunta"
        app:layout_constraintBottom_toTopOf="@+id/button_anterior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t3"
        app:layout_constraintVertical_bias="0.125" />
</androidx.constraintlayout.widget.ConstraintLayout>